[package]
name = "slack-keybase-bridge"
version = "0.1.0"
authors = ["Marco Munizaga <marco@marcopolo.io>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slack = "0.22.0"
toml = "0.5.3"
serde = "1.0.101"
serde_derive = "1.0.101"
futures-preview = "0.3.0-alpha.18"
keybase-bot-api = "0.4.1"
# keybase-bot-api = {path = "../rusty-keybase-bot"}
keybase-protocol = "0.1.0"
transient-hashmap = "0.4.1"
reqwest = "0.9.20"
# reqwest = {version = "0.9.20", features = ["rustls-tls"], default-features = false }
serde_json = "1.0.40"
htmlescape = "0.3.1"